# Auto-Quant

./: README.md  prepare.py  program.md  pyproject.toml  run.py
user_data/strategies/: AltsBollBreak.py  AltsBollLowerMR.py  AutoResearch.py  BNBMeanRevertMulti.py  BNBMeanRevertSharp.py  BNBSizedConviction.py  BTCLeaderBreak.py  BTCLeaderBreakV4.py  BTCLeaderBreakX.py  ChannelADXTrend.py  CrashRebound.py  CrossPairMR.py  CrossPairRatio.py  MACDMomentum.py  MACDMomentumMTF.py  MTFTrendStack.py  MajorsBTCLeader.py  MeanRevBB.py  MeanRevBBClean.py  MeanRevRSIDip.py  MomentumGoldFilters.py  MomentumMTFConfluence.py  PerPairMR.py  RegimeAdaptiveBNB.py  TrendDonchian.py  TrendEMAStack.py  TrendRegimeFiltered.py  VolBBSqueeze.py  VolBreakoutEqual.py  VolBreakoutSized.py  VolSqueezeBreak.py  _template.py.example
versions/0.4.2_draft/: enhanced_ccxt_processor.py  example.py  frac_diff.py  gaussian_normalizer.py  requirements.txt
